# modal-llm-benchmarking

./: .env.example  .gitignore  README.md  benchmark.py  inference.py  pyproject.toml
open-webui/: Dockerfile
scripts/: gmail_finetune.py  vllm_inference.py
training/: README.md  compare_lora.py  pyproject.toml  run_inference.py  train_model.py  utils.py
training/eval_prompts/: email.yaml  math.yaml  news.yaml
training/notebooks/: finetine_peft_fakenews.ipynb
training/scripts/: gmail_finetune.py
